# noktech-deploy

./: .deployignore  .gitignore  .mypy.ini  CHANGELOG.md  LICENSE  README.md  README_en.md  build.bat  build.py  build_config.py  config.json  deploy_client.spec  hook-aioftp.py  main.py  mkdocs.yml  noktech-deploy.spec  pyproject.toml  setup.py  src.deploy_client  version_info.txt
.github/: release-drafter-config.yml
.github/workflows/: publish.yml  release-drafter.yml  release.yml
docs/: api.md  api_en.md  configuration.md  configuration_en.md  contributing.md  contributing_en.md  development.md  examples.md  examples_en.md  ignore_rules.md  ignore_rules_en.md  protocols.md  protocols_en.md  quickstart.md  quickstart_en.md  watching.md  watching_en.md
docs/en/: index.md
docs/en/api/: core.md  deployers.md  utils.md
docs/en/guide/: configuration.md  installation.md  usage.md
docs/guide/: installation.md  usage.md
docs/pt/: index.md
docs/pt/api/: core.md  deployers.md  utils.md
docs/pt/guide/: configuration.md  installation.md  usage.md
lang/: en_us.json  pt_br.json
scripts/: docs.py
src/: __init__.py  __main__.py  cli.py  deploy_client.py  main.py  version.py  version_checker.py
src/core/: __init__.py  config.py  constants.py  deploy_manager.py  file_manager.py  ignore_rules.py  logger.py  progress.py  watch_manager.py  watcher.py
src/deployers/: __init__.py  base.py  base_deployer.py  factory.py  ftp_deployer.py  local_deployer.py  progress_mixin.py  ssh_deployer.py  sync_mixin.py
src/i18n/: __init__.py  validator.py
src/i18n/lang/: en_us.json  pt_br.json
src/scripts/: update_version.py
src/utils/: __init__.py  cli.py  config.py  interactive.py  log_manager.py  logger.py
tests/: conftest.py  test_cli.py  test_core.py  test_deployers.py  test_integration.py  test_utils.py
tests/e2e/: test_client_scenarios.py
tests/integration/: test_deploy_flows.py
tests/unit/: test_deployers.py
