[tool.poetry]
name = "noktech-deploy"
version = "0.1.2"
description = "Advanced deployment client with multiple protocols support"
authors = ["Breno Nogueira"]
license = "MIT"
readme = "README.md"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.8.1,<3.13"
watchdog = "^3.0.0"
paramiko = "^3.4.0"
typing-extensions = "^4.9.0"
asyncssh = "^2.14.2"
pyinstaller = "^6.4.0"
requests = "^2.32.3"

[tool.poetry.group.dev.dependencies]
pytest = "^8.0.0"
pytest-cov = "^4.1.0"
pytest-asyncio = "^0.21.0"
black = "^24.1.1"
flake8 = "^6.0.0"
mypy = "^1.3.0"
ruff = "^0.8.2"
mkdocs = "^1.5.0"
mkdocs-material = "^9.0.0"
mkdocs-i18n = "^0.4.0"
mkdocstrings = {extras = ["python"], version = "^0.24.0"}

[tool.poetry.scripts]
noktech-deploy = "src.main:main"
docs = "scripts.docs:serve_docs"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
addopts = "--cov=src --cov-report=html" 